# versatus-rust

./: Cargo.toml  README.md
eip/: Cargo.toml  README.md
eip/examples/: erc20.rs
eip/src/: versatus_rust.rs
examples/: contract-split-evenly.rs  erc20.rs  json.rs  sample-contract-input.json
lasr/: Cargo.toml  README.md
lasr/src/: lib.rs  main.rs
lasr/src/examples/: mod.rs
lasr/src/examples/blank/: example_program.rs  mod.rs
lasr/src/examples/blank/example-program-inputs/: blank-create.json
lasr/src/examples/faucet/: example_program.rs
lasr/src/examples/faucet/example-program-inputs/: faucet-add-first-program.json  faucet-add-program.json  faucet-create.json  faucet-faucet-2.json  faucet-faucet-fail.json  faucet-faucet.json
lasr/src/examples/fungible/example-program-inputs/: fungible-burn.json  fungible-create-fail.json  fungible-create.json  fungible-mint-fail.json  fungible-mint.json  fungible-update.json
lasr/src/examples/hello_lasr/: example_program.rs
lasr/src/examples/hello_lasr/example-program-inputs/: lasr-hello-create.json
lasr/src/examples/non_fungible/: example_program.rs
lasr/src/examples/non_fungible/example-program-inputs/: non-fungible-approve.json  non-fungible-burn-fail.json  non-fungible-burn.json  non-fungible-create.json  non-fungible-mint-fail.json  non-fungible-mint.json  non-fungible-update.json
lasr/src/lasrctl/: cli.rs  mod.rs
lasr/src/lasrctl/builders/: instruction.rs  program.rs
lasr/src/lasrctl/cli/: mod.rs
lasr/src/lasrctl/cli/commands/: build.rs  call.rs  deploy.rs  init.rs  mod.rs  send.rs  test.rs
lasr/src/lasrctl/commands/: init.rs
lasr/src/lasrctl/network/: client.rs  mod.rs
lasr/src/scripts/: consts.rs
lasr/test_data/: Cargo.toml
lasr/test_data/.lasr/: keypair.json
lasr/test_data/src/: main.rs
src/: eip165.rs  eip20.rs  eip721.rs  lib.rs  versatus_rust.rs
