[package]
name = "versatus-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethnum = { version = "1", features = ["serde"] }
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.103"
