[package]
name = "lasr-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.7", features = [ "derive" ] }
lasr_types = { path = "../../lasr/crates/types" }
lasr_wallet = { path = "../../lasr/crates/wallet" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
