[package]
name = "test_data"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
anyhow = "1.0"
lasr_types = "0.9.0"
serde_json = "1.0"
lasr-rust = { path = "../" }
